--- a/tests/manual/abbreviation-level-1.html
+++ b/tests/manual/abbreviation-level-1.html
@@ -1,4 +1,8 @@
 <div id="snippet-abbreviation-plugin">
-    <h2>Abbreviation plugin</h2>
-    <p>CKEditor5 is a modern, feature-rich, world-class <abbr title="What You See Is What You Get">WYSIWYG</abbr> editor.</p>
+	<h2>Abbreviation plugin</h2>
+	<p>
+		CKEditor5 is a modern, feature-rich, world-class
+		<abbr title="What You See Is What You Get">WYSIWYG</abbr> editor.
+	</p>
 </div>
+<div id="editor"></div>
